<resources>
    <string name="app_name">Calculadora2.0</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="div">/</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnmult">*</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btnsum">+</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btnrest">-</string>
    <string name="btn0">0</string>
    <string name="btnpunto">.</string>
    <string name="btnigual">=</string>
</resources>