<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/azul_calcu">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:textSize="60dp"
        android:background="@color/teal_200"
        app:layout_constraintLeft_toLeftOf="@id/guideline1"
        app:layout_constraintRight_toRightOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/btnc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="7dp"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/pantalla"
        android:backgroundTint="@color/naranja"
        android:onClick="acEvent"/>

    <Button
        android:id="@+id/btndel"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="30dp"
        android:text="@string/del"
        app:layout_constraintStart_toEndOf="@id/btnc"
        app:layout_constraintTop_toBottomOf="@id/pantalla"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/btndiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/div"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/pantalla"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/btn7"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btnc"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn8"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn9"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btndel"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btnmult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btnmult"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btndiv"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/btn4"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn7"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn5"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn8"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn6"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn9"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btnsum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btnsum"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btnmult"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="operatorEvent"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn4"
        android:onClick="numberEvent"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn2"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn5"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btn3"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn6"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btnrest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:text="@string/btnrest"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btnsum"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="operatorEvent"/>


    <Button
        android:id="@+id/btn0"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/btn0"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/btn2"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btnpunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="92dp"
        android:text="@string/btnpunto"
        app:layout_constraintEnd_toEndOf="@id/btnigual"
        app:layout_constraintTop_toBottomOf="@id/btn3"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="numberEvent"/>

    <Button
        android:id="@+id/btnigual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/btnigual"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/btnrest"
        style="@style/borde"
        android:backgroundTint="@color/boton_press"
        android:onClick="equalEvent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>